--- a/expenseapp/templates/expenseapp/update.html
+++ b/expenseapp/templates/expenseapp/update.html
@@ -16,7 +16,7 @@
                 <label for="">date</label>
                 <input type="date" name="date" value="{{ expense.date|date:'Y-m-d' }}"> <br><br>
                 <label for="">category</label>
-                <input type="text" name="category" value="{{ expen.category }}"> <br><br>
+                <input type="text" name="category" value="{{ expense.category }}"> <br><br>
                 <label for="">amount</label>
                 <input type="number" name="amount" value="{{ expense.amount }}"> <br><br>
                 <label for="">description</label>
