Added Excel export feature for expenses

--- a/expenseapp/templates/expenseapp/index.html
+++ b/expenseapp/templates/expenseapp/index.html
@@ -47,8 +47,6 @@
     </div>
     <a href="{% url 'add' %}"><button id="new3">add expense</button></a>
 
-    <a href="{% url 'export_excel' %}">
-    <button>Download Excel</button>
-</a>
+    <a href="{% url 'export_excel' %}"><button>Download Excel</button></a>
 </body>
 </html>
